# bigs

./: .gitignore  README.md  bigs_check_lerf.py  bigs_check_ovs3d.py  bigs_langsplat.py  bigs_langsplat_eval.py  bigs_read_lansplat.py  bigs_style.py  check.py  exp_0_render_views.py  exp_1_use_sam2.py  exp_1_vis_mask.py  exp_2_apply_edit.py  exp_2_obj_removal.py  exp_2_view_measure.py  gsd_2_multiobj_lerfmask.py  gsd_nvos_obj_removal.py  gsd_nvos_render_views.py  gsd_nvos_use_sam2.py  langsplat.ps1  main.py  nvos_experiment.md  pyproject.toml  sail-tool.code-workspace  tool.code-workspace  v_arguments.py  v_full_eval.py  v_metrics.py  v_render.py  v_train.py  visualize_feat_hist.py  visualize_heat_img.py  z_demo.py  z_tool.py  z_train.py  z_variance.py  z_vis.py
config/: __init__.py  gsd.json  langsplat.json  nvos.json  reprod.json  style.json  teaser.json
doc/: dev.md  exp.md  task.md
lerf_eval/: colormaps.py  evaluate_iou_loc.py  openclip_encoder.py
lib/: vanilla_3dgs_render.py
lib/bigs/: .gitignore  auxiliary.cuh  cent.py  config.h  cov.cuh  ext.cpp  featmark.cu  featmark.h  featmark_impl.cu  featmark_impl.h  featmark_point.cu  featmark_point.h  gs_state.cu  gs_state.h  jit.py  project.cuh  setup.py
lib/sail/: .clangd  .gitignore  __init__.py  module.py  module_base.py  xmake.lua
lib/simple_knn/: jit.py  pyproject.toml  setup.py  simple_knn.cu
lib/simple_knn/simple_knn/: __init__.py
lib/vanilla_3dgs/: backward.cu  forward.cu  jit.py  setup.py  (+1 more)
scene/: __init__.py  cameras.py  colmap_loader.py  dataset_readers.py  gaussian_model.py
tasks/: vis.py
tests/: test_sailc.py
tools/: extract.py
utils/: blender_utils.py  camera_utils.py  gaussian_utils.py  graphics_utils.py  gsd_utils.py  image_utils.py  lerf_utils.py  vis_utils.py
(+27 files in other folders)
