[project]
name = "bigs"
version = "0.1.0"
description = "The Bayesian Inference Gaussian Splatting (BIGS) library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "ninja>=1.11.1.4",
    "opencv-python>=4.11.0.86",
    "plyfile>=1.1.2",
    "pytest>=8.4.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]


[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]


[tool.ruff]
lint.ignore = ["ALL"]
lint.select = [
    "S307",  # suspicious-eval-usage
    "S102",  # exec
    "T",     # print-usage
    "W",     # warnings
    "F",     # Pyflakes rules
]
exclude = ["*.ipynb"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "--tb=short",
    "--disable-warnings",
    "-p no:warnings",
    "-p no:cacheprovider",
]
markers = [
    "asyncio: mark test as asyncio",
    "current: mark test as current",
    "app: application suite",
    "func: functionality suite"
]
norecursedirs=[
    "data",
    "samples"
]
pythonpaths = [
    "."
]